# siege-render

./: .gitignore  COORDS.txt  Cargo.toml  PASSES.txt  PBR.txt  Photometry.txt  README.md  Radiometry.txt  RadiometryValues.txt  SHADOWS.txt  THREAD.txt  THREADING.txt  TODO.txt  run.sh  run.sh.template  srgb.txt
examples/: basictest.rs  colortest.rs  simple.rs
examples/shaders/: build.sh  colortest.frag  colortest.frag.spv  colortest.vert  colortest.vert.spv
src/: config.rs  error.rs  errors.rs  format.rs  lib.rs  math.rs  plugin.rs  renderer.rs  vertex.rs
src/renderer/: blur.rs  buffer.rs  commander.rs  image_wrap.rs  mesh.rs  mod.rs  pipeline.rs  post.rs  queue_indices.rs  requirements.rs  resource_manager.rs  setup.rs  shade.rs  stats.rs  surface_data.rs  swapchain_data.rs  target_data.rs  types.rs
src/renderer/memory/: block.rs  chunk.rs  mapped.rs  mod.rs
src/renderer/passes/: earlyz.rs  geometry.rs  mod.rs  opaque.rs  post.rs  shading.rs  transparent.rs  ui.rs
src/renderer/passes/bloom/: filter.rs  h.rs  mod.rs  v.rs
src/renderer/passes/blur/: blurh.rs  blurv.rs  mod.rs
src/renderer/setup/: debug_report.rs  device.rs  instance.rs  mod.rs  physical.rs  queue_indices.rs  requirements.rs  surface.rs
