[package]
name = "siege-render"
version = "0.4.0-unstable"
authors = ["Mike Dilger <mike@optcomp.nz>"]
description = "Siege Game Engine Rendering Component"
repository = "https://github.com/SiegeEngine/siege-render"
readme = "README.md"
license = "MIT"

[features]
default = ["use-siege-math"]
use-siege-math = [ "siege-math", "siege-mesh/siege-math" ]
use-cgmath = [ "cgmath", "siege-mesh/cgmath" ]
use-nalgebra = [ "nalgebra", "siege-mesh/nalgebra" ]

[dependencies]
ash = "0.24"
cgmath = { version = "0.16", features = ["serde"], optional = true }
ddsfile = "0.2.3"
error-chain = "0.11"
lazy_static = "1.0"
log = "0.4"
nalgebra = { version = "0.14", features = ["serde-serialize"], optional = true }
separator = "0.3"
serde = "1.0"
serde_derive = "1.0"
siege-mesh = { git = "https://github.com/SiegeEngine/siege-mesh.git", default-features = false }
siege-math = { git = "https://github.com/SiegeEngine/siege-math.git", optional = true }
siege-vulkan = { git = "https://github.com/SiegeEngine/siege-vulkan.git" }
winapi = "0.3"
winit = "0.15"
